--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,27 @@ services:
   telegraf:
     image: telegraf:latest
     container_name: telegraf_arkanoid
-    network_mode: "bridge"
+    networks:
+      - bridge
     volumes:
       - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
     depends_on:
       - influxdb
     ports:
-      - '172.17.0.4:8094:8094/tcp'
-      - '172.17.0.4:8092:8092/udp'
-      - '172.17.0.4:8125:8125/udp'      
+      - '8094:8094'
+      - '8092:8092'
+      - '8125:8125'      
 
   influxdb:
     image: influxdb:1.8
     container_name: influxdb_arkanoid
     restart: always
-    network_mode: "bridge"
+    networks:
+      - bridge
     volumes:
       - ./containers/influxdb_arkanoid_storage:/var/lib/influxdb
     ports:
-      - '172.17.0.3:8086:8086'
+      - '8086:8086'
     environment:
       - INFLUXDB_DB=arkanoid
       - INFLUXDB_USER=arkanoid_publisher
@@ -32,7 +34,20 @@ services:
     image: eclipse-mosquitto:1.6.14
     container_name: arkanoid_broker
     restart: always
-    network_mode: "bridge"
+    networks:
+      - bridge
     ports:
-      - '172.17.0.2:1883:1883'
-      - '172.17.0.2:9001:9001'
+      - '1883:1883'
+      - '9001:9001'
+
+networks:
+  bridge:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 172.17.0.0/16
+         gateway: 172.17.0.1
+         aux_addresses:
+           telegraf: 172.17.0.4
+           influxdb: 172.17.0.3      
+           mosquitto: 172.17.0.2
